bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q7 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
DecodeObjectIdsExec: projections=[decode(productLabel) as productLabel, decode(offer) as offer, decode(price) as price, decode(vendor) as vendor, decode(vendorTitle) as vendorTitle, decode(review) as review, decode(revTitle) as revTitle, decode(reviewer) as reviewer, decode(revName) as revName, decode(rating1) as rating1, decode(rating2) as rating2]
  NestedLoopJoinExec: join_type=Left, projection=[productLabel@0, offer@1, price@2, vendor@3, vendorTitle@4, review@5, revTitle@8, reviewer@6, revName@7, rating1@9, rating2@10]
    NestedLoopJoinExec: join_type=Left
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801> <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.parquet:0..3811435]]}, projection=[object@3 as productLabel], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 21381 AND predicate@2 = 1610, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 21381 AND 21381 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 1610 AND 1610 <= predicate_max@6, required_guarantees=[predicate in (1610), subject in (21381)]
      FilterExec: EBV(GT(ENC_TF(date@4), 6:{date_time_type:0,value:63349516800.000000000000000000,offset:})), projection=[offer@2, price@3, vendor@0, vendorTitle@1]
        DecodeObjectIdsExec: projections=[vendor, vendorTitle, offer, price, decode(date) as date]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@1), (offer@2, offer@0)], projection=[vendor@0, vendorTitle@1, offer@2, price@3, date@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@2, offer@0)], projection=[vendor@0, vendorTitle@1, offer@2, price@3, date@5]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@2, offer@0)], projection=[vendor@0, vendorTitle@1, offer@2, price@4]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@2, offer@0)], projection=[vendor@0, vendorTitle@1, offer@2]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@1)], projection=[vendor@0, vendorTitle@1, offer@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@0, vendor@0)], projection=[vendor@0, vendorTitle@2]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#DE>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14903 AND object@3 = 14944, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14903 AND 14903 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 14944 AND 14944 <= object_max@6, required_guarantees=[object in (14944), predicate in (14903)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www.w3.org/2000/01/rdf-schema#label> ?vendorTitle], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as vendor, object@3 as vendorTitle], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23402 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23402 AND 23402 <= predicate_max@2, required_guarantees=[predicate in (23402)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23401 AND object@3 = 21381 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23401 AND 23401 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 21381 AND 21381 <= object_max@6, required_guarantees=[object in (21381), predicate in (23401)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23403 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23403 AND 23403 <= predicate_max@2, required_guarantees=[predicate in (23403)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23405 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23405 AND 23405 <= predicate_max@2, required_guarantees=[predicate in (23405)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1612 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1612 AND 1612 <= predicate_max@2, required_guarantees=[predicate in (1612)]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@3, rating1@4, rating2@6]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@3, rating1@5]
        ProjectionExec: expr=[review@2 as review, reviewer@0 as reviewer, revName@1 as revName, revTitle@3 as revTitle]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@2, review@0)], projection=[reviewer@0, revName@1, review@2, revTitle@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@2, review@0)], projection=[reviewer@0, revName@1, review@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@0, reviewer@1)], projection=[reviewer@0, revName@1, review@2]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?revName], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as reviewer, object@3 as revName], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84984, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84984 AND 84984 <= predicate_max@2, required_guarantees=[predicate in (84984)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as review, object@3 as reviewer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84987 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84987 AND 84987 <= predicate_max@2, required_guarantees=[predicate in (84987)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as review], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84986 AND object@3 = 21381 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84986 AND 84986 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 21381 AND 21381 <= object_max@6, required_guarantees=[object in (21381), predicate in (84986)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?revTitle], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as review, object@3 as revTitle], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84989 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84989 AND 84989 <= predicate_max@2, required_guarantees=[predicate in (84989)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as review, object@3 as rating1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84993 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84993 AND 84993 <= predicate_max@2, required_guarantees=[predicate in (84993)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..4107081]]}, projection=[subject@1 as review, object@3 as rating2], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84991 AND DynamicFilter [ empty ], dynamic_rg_pruning=eligible, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84991 AND 84991 <= predicate_max@2, required_guarantees=[predicate in (84991)]
