bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q7 (Execution Plan, Plain Term).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[productLabel@0 as productLabel, offer@1 as offer, price@2 as price, vendor@3 as vendor, vendorTitle@4 as vendorTitle, review@5 as review, revTitle@8 as revTitle, reviewer@6 as reviewer, revName@7 as revName, rating1@9 as rating1, rating2@10 as rating2]
  NestedLoopJoinExec: join_type=Left
    NestedLoopJoinExec: join_type=Left
      DeltaQuadStorageScanExec: index=GSPO, active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801> <http://www.w3.org/2000/01/rdf-schema#label> ?productLabel], blank_node_mode=Variable
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@1, vendor@2, vendorTitle@3]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0), (vendor@2, vendor@1)], projection=[offer@0, price@1, vendor@2, vendorTitle@3]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@2, vendor@0)], projection=[offer@0, price@1, vendor@2, vendorTitle@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@2, vendor@0)], projection=[offer@0, price@1, vendor@2, vendorTitle@4]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@1, vendor@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@2]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>], blank_node_mode=Variable
                  FilterExec: DynamicFilter [ empty ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                FilterExec: DynamicFilter [ empty ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?vendor <http://www.w3.org/2000/01/rdf-schema#label> ?vendorTitle], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
            FilterExec: DynamicFilter [ empty ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#DE>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
          FilterExec: DynamicFilter [ empty ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
        FilterExec: EBV(GT(ENC_TF(date@1), 5:{date_time_type:0,value:63349516800.000000000000000000,offset:})), projection=[offer@0]
          FilterExec: DynamicFilter [ empty ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@3, rating1@4, rating2@6]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@3, rating1@5]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@1, revName@2, revTitle@4]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@1, reviewer@0)], projection=[review@0, reviewer@1, revName@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@2]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product801>], blank_node_mode=Variable
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
            FilterExec: DynamicFilter [ empty ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?reviewer <http://xmlns.com/foaf/0.1/name> ?revName], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
          FilterExec: DynamicFilter [ empty ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/title> ?revTitle], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?rating1], blank_node_mode=Variable
      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?rating2], blank_node_mode=Variable
